--- a/simpsonizados/simpsonizados/Base.lproj/Main.storyboard
+++ b/simpsonizados/simpsonizados/Base.lproj/Main.storyboard
@@ -91,7 +91,8 @@
         <!--Navigation Controller-->
         <scene sceneID="rnw-r3-dSQ">
             <objects>
-                <navigationController id="2qA-7o-00x" sceneMemberID="viewController">
+                <navigationController hidesBarsOnSwipe="YES" id="2qA-7o-00x" sceneMemberID="viewController">
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="fMl-fx-FN4">
                         <rect key="frame" x="0.0" y="0.0" width="1920" height="145"/>
                         <autoresizingMask key="autoresizingMask"/>
