--- a/simpsonizados/simpsonizados/Base.lproj/Main.storyboard
+++ b/simpsonizados/simpsonizados/Base.lproj/Main.storyboard
@@ -91,7 +91,7 @@
         <!--Navigation Controller-->
         <scene sceneID="rnw-r3-dSQ">
             <objects>
-                <navigationController hidesBarsOnSwipe="YES" id="2qA-7o-00x" sceneMemberID="viewController">
+                <navigationController id="2qA-7o-00x" sceneMemberID="viewController">
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="fMl-fx-FN4">
                         <rect key="frame" x="0.0" y="0.0" width="1920" height="145"/>
@@ -116,11 +116,11 @@
                             <size key="itemSize" width="400" height="300"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="100" minY="0.0" maxX="100" maxY="0.0"/>
+                            <inset key="sectionInset" minX="100" minY="50" maxX="100" maxY="100"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SeasonCellIdentifier" id="64q-SD-iRU" customClass="SeasonCollectionViewCell" customModule="simpsonizados" customModuleProvider="target">
-                                <rect key="frame" x="100" y="145" width="400" height="300"/>
+                                <rect key="frame" x="100" y="195" width="400" height="300"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="400" height="300"/>
